@@ -1,6 +1,8 @@
 package com.chessplatform.persistence.controller;
 
+import com.chessplatform.persistence.GameAnalysisService;
 import com.chessplatform.persistence.GameReplayService;
+import com.chessplatform.persistence.dto.GameAnalysisResponse;
 import com.chessplatform.persistence.dto.GameDetailResponse;
 import com.chessplatform.persistence.dto.GameSummaryResponse;
 import com.chessplatform.persistence.entity.Game;
@@ -13,11 +15,13 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -26,13 +30,16 @@ class GameHistoryControllerTest {
     @Mock
     private GameRepository gameRepository;
 
+    @Mock
+    private GameAnalysisService analysisService;
+
     private GameHistoryController controller;
 
     @BeforeEach
     void setUp() {
         // GameReplayService real: es puro/barato, y así se comprueba el cableado
         // completo (jugadas guardadas -> FEN reconstruidos), no solo que se llamó a algo.
-        controller = new GameHistoryController(gameRepository, new GameReplayService());
+        controller = new GameHistoryController(gameRepository, new GameReplayService(), analysisService);
     }
 
     private static Game gameOf(User white, User black, String result, String moveList) {
@@ -59,7 +66,7 @@ class GameHistoryControllerTest {
         List<GameSummaryResponse> history = controller.historyForUser("user-1");
 
         assertThat(history).hasSize(1);
-        GameSummaryResponse summary = history.getFirst();
+        GameSummaryResponse summary = history.get(0);
         assertThat(summary.whiteUsername()).isEqualTo("alice");
         assertThat(summary.blackUsername()).isEqualTo("bob");
         assertThat(summary.result()).isEqualTo("1-0");
@@ -121,5 +128,55 @@ class GameHistoryControllerTest {
         GameDetailResponse detail = controller.gameDetail("game-1");
 
         assertThat(detail.reason()).isEqualTo("resignation");
+    }
+
+    @Test
+    void gameAnalysisThrowsServiceUnavailableWhenTheEngineIsNotConfigured() {
+        when(analysisService.isAvailable()).thenReturn(false);
+
+        assertThatThrownBy(() -> controller.gameAnalysis("game-1"))
+                .isInstanceOf(ResponseStatusException.class);
+    }
+
+    @Test
+    void gameAnalysisThrowsNotFoundWhenTheGameDoesNotExist() {
+        when(analysisService.isAvailable()).thenReturn(true);
+        when(gameRepository.findById("missing-game")).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> controller.gameAnalysis("missing-game"))
+                .isInstanceOf(ResponseStatusException.class);
+    }
+
+    @Test
+    void gameAnalysisReturnsTheAnalyzedMoves() throws IOException {
+        User alice = new User("alice", "hash");
+        User bob = new User("bob", "hash");
+        Game game = gameOf(alice, bob, "1-0", "e2e4 e7e5");
+        when(analysisService.isAvailable()).thenReturn(true);
+        when(gameRepository.findById("game-1")).thenReturn(Optional.of(game));
+        when(analysisService.analyze("e2e4 e7e5")).thenReturn(List.of(
+                new GameAnalysisService.MoveAnalysis(1, "e4", 20, null, "best"),
+                new GameAnalysisService.MoveAnalysis(2, "e5", 15, null, "best")
+        ));
+
+        GameAnalysisResponse response = controller.gameAnalysis("game-1");
+
+        assertThat(response.gameId()).isEqualTo("game-1");
+        assertThat(response.moves()).hasSize(2);
+        assertThat(response.moves().get(0).notation()).isEqualTo("e4");
+        assertThat(response.moves().get(0).classification()).isEqualTo("best");
+    }
+
+    @Test
+    void gameAnalysisThrowsServiceUnavailableWhenTheEngineFailsMidAnalysis() throws IOException {
+        User alice = new User("alice", "hash");
+        User bob = new User("bob", "hash");
+        Game game = gameOf(alice, bob, "1-0", "e2e4 e7e5");
+        when(analysisService.isAvailable()).thenReturn(true);
+        when(gameRepository.findById("game-1")).thenReturn(Optional.of(game));
+        when(analysisService.analyze(anyString())).thenThrow(new IOException("el motor se cayó"));
+
+        assertThatThrownBy(() -> controller.gameAnalysis("game-1"))
+                .isInstanceOf(ResponseStatusException.class);
     }
 }
